--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     broom.mixed,
-    openxlsx
+    Hmisc,
+    openxlsx,
+    sjlabelled
 Depends: 
     tidyverse
