--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(extract_model_results_conf)
 export(extract_model_results_tidy)
 export(harmonise_types)
+export(process_ukb_data)
 export(quartile_cut)
 export(write_xlsx)
