--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     broom.mixed,
+    glue,
     Hmisc,
     openxlsx,
     sjlabelled
