--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
-    broom.mixed,
-    Hmisc,
-    openxlsx,
-    sjlabelled
+    broom.mixed
 Depends: 
     glue,
+    Hmisc,
+    openxlsx,
+    sjlabelled,
     tidyverse
