add rename_ukb_data function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(format_sas_code)
 export(harmonise_types)
 export(process_ukb_data)
 export(quartile_cut)
+export(rename_ukb_data)
 export(write_xlsx)
