--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(extract_model_results_conf)
 export(extract_model_results_tidy)
+export(extract_ukb_data)
 export(format_sas_code)
 export(harmonise_types)
 export(process_ukb_data)
 export(quartile_cut)
 export(rename_ukb_data)
+export(smart_merge)
 export(write_xlsx)
