add a new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(extract_model_results_conf)
 export(extract_model_results_tidy)
 export(extract_ukb_data)
 export(format_sas_code)
+export(generate_field_ids)
 export(harmonise_types)
 export(process_ukb_data)
 export(quartile_cut)
