update all function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,9 @@ export(extract_model_results_conf)
 export(extract_model_results_tidy)
 export(extract_ukb_data)
 export(format_sas_code)
-export(generate_field_ids)
+export(generate_fieldids_code)
 export(harmonise_types)
+export(preprocess_ukb_pipline)
 export(process_ukb_data)
 export(quartile_cut)
 export(rename_ukb_data)
