--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(extract_model_results_tidy)
 export(extract_ukb_data)
 export(format_sas_code)
 export(generate_fieldids_code)
+export(handle_outliers)
 export(harmonise_types)
 export(preprocess_ukb_pipline)
 export(process_ukb_data)
